--- a/src/css/banner.module.css
+++ b/src/css/banner.module.css
@@ -1,29 +1,93 @@
 .banner_container {
-  margin-top: 76px;
-}
-.slider_container {
+  margin-top: 75px;
 }
 .slider_wrapper {
   position: relative;
+  overflow: hidden;
+  height: 800px;
 }
 .bannerImg {
+  width: 100%;
+  height: 100%;
+  animation: zoomIn 8s ease 0.3s 1 normal forwards;
 }
 .banner_content {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
+  padding: 6rem;
   display: flex;
   justify-content: space-between;
 }
 .banner_details {
-  width: 40%;
+  width: 50%;
   text-align: left;
   color: var(--light-color);
-  margin: 10rem 0 0 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .banner_details h2 {
   font-size: 5rem;
 }
+.banner_details p {
+  margin: 2rem 0;
+}
 .banner_icon {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+/* .banner_icon img {
+  width: 90%;
+} */
+
+/* ----------------animation--------------- */
+@keyframes zoomIn {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.5);
+  }
+}
+
+/* ------------Responsivness---------- */
+@media (max-width: 1200px) {
+  .banner_content {
+    padding: 4rem;
+  }
+  .banner_details h2 {
+    font-size: 4rem;
+    line-height: 50px;
+  }
+  .banner_details p {
+    margin: 1.2rem 0;
+  }
+}
+@media (max-width: 960px) {
+  .banner_details {
+    width: 100%;
+  }
+  .banner_icon {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .banner_content {
+    padding: 0 2rem;
+  }
+  .banner_details h2 {
+    font-size: 2.6rem;
+    line-height: 30px;
+  }
+  .banner_details p {
+    margin: 0.5rem 0;
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 480px) {
 }
