--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  max-width: 1700px;
+  margin: 0 auto;
 }
 /* global components styles */
 .button {
@@ -28,15 +30,20 @@ body {
   letter-spacing: 1px;
   border: none;
   border-radius: 0.5rem;
-  margin: 1.5rem 0;
+  width: max-content;
   background: var(--accent-color);
   color: var(--secondary-color);
   cursor: pointer;
+  transition: 0.4s;
+}
+.button:hover {
+  background: var(--secondary-color);
+  color: var(--accent-color);
 }
 .heading h2 {
   font-size: 2.8rem;
   text-align: center;
-  margin: 1rem 0;
+  margin: 2rem 0;
   font-weight: 600;
   color: var(--primary-color);
 }
@@ -62,3 +69,31 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
+/* ------------Responsivness---------- */
+@media (max-width: 1200px) {
+}
+@media (max-width: 960px) {
+}
+@media (max-width: 768px) {
+  .button {
+    font-size: 1.3rem;
+    padding: 0.7rem 1.5rem;
+  }
+}
+@media (max-width: 480px) {
+}
+
+/* ------------Responsivness---------- */
+/* @media (max-width: 1200px) {
+  
+}
+@media (max-width: 960px) {
+  
+}
+@media (max-width: 768px) {
+  
+}
+@media (max-width: 480px) {
+  
+} */
