--- a/src/css/blog.module.css
+++ b/src/css/blog.module.css
@@ -1,5 +1,5 @@
 .blog_container {
-  margin-top: 5rem;
+  padding: 7.2rem 6rem 2rem;
 }
 .blog_wrapper {
   display: flex;
@@ -7,10 +7,10 @@
   justify-content: center;
   gap: 30px;
   flex-wrap: wrap;
-  margin-top: 4rem;
+  margin-top: 5rem;
 }
 .post_card {
-  flex: 0 0 350px;
+  flex: 0 0 320px;
 }
 .post_card img {
   width: 100%;
@@ -30,4 +30,25 @@
   font-size: 1.5rem;
   margin: 2rem 0 1rem;
   text-align: justify;
+}
+/* ------------Responsivness---------- */
+@media (max-width: 1200px) {
+}
+@media (max-width: 960px) {
+  .blog_container {
+    padding: 7.2rem 4rem 2rem;
+  }
+}
+@media (max-width: 750px) {
+  .post_card {
+    flex: 0 0 350px;
+  }
+}
+@media (max-width: 480px) {
+  .blog_container {
+    padding: 7.2rem 3rem 2rem;
+  }
+  .post_card {
+    flex: 0 0 100%;
+  }
 }
