--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: flex-start;
   width: 100%;
-  padding: 2rem 8rem;
+  padding: 2rem 4rem;
   position: relative;
   z-index: 1;
 }
@@ -113,333 +113,47 @@
   color: var(--light-color);
   width: 100%;
 }
-/* 
-.footer_container {
-  width: 100%;
-  
-  
-  
-  height: 450px;
-}
-.layer {
-  
-}
-.footer_wrapper {
-  display: flex;
-  padding: 0 60px 30px 60px;
-  position: absolute;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: var(--light-color);
-}
-.partners_module {
-  display: flex;
-  width: 50%;
-  flex-direction: column;
-}
-.partner_module_text {
-  font-size: 2rem;
-  text-align: center;
-  margin-bottom: 60px;
-  letter-spacing: 0.2ch;
-  border-bottom: 1px solid #5c5f64;
-  width: max-content;
-}
-.partner_module_text h2 {
-  font-weight: 500;
-}
 
-.partner_icon_modules {
-  display: flex;
-  justify-content: space-between;
-}
-
-.partners_icon {
-  font-size: 3rem;
-  transition: 0.2s;
-  padding: 20px;
-  cursor: pointer;
-}
-
-.partners_icon:hover {
-  transform: scale(1.1);
-  color: var(--accent-color);
-}
-
-.footer_contact_address {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 50px;
-  font-size: 1.3rem;
-}
-
-
-
-.footer_info_module_container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.footer_info_module {
-  padding: 0 20px;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.social_links {
-  height: 100%;
-  width: 60%;
-  display: flex;
-  color: antiquewhite;
-  font-size: 2rem;
-  justify-content: space-between;
-  margin: 50px auto 0 auto;
-  align-items: center;
-}
-
-.single_social_link {
-  padding: 15px;
-  transition: 0.2s;
-  cursor: pointer;
-}
-
-.single_social_link:hover {
-  color: #fe8631;
-}
-
-.footer_info_heading {
-  font-size: 1.5rem;
-  letter-spacing: 0.2ch;
-  border-bottom: 1px solid #2e3553;
-}
-
-
-
-****responsive styles****
-Extra small devices (phones, 600px and down)
-@media only screen and (max-width: 600px) {
-  .footer_container {
-    width: 100%;
-    height: 1400px;
-  }
-
+/* ------------Responsivness---------- */
+@media (max-width: 960px) {
   .footer_wrapper {
-    display: flex;
-    padding: 0 35px 30px 35px;
     flex-direction: column;
   }
-
-  .partners_module {
+  .partner_wrapper {
+    width: 100%;
+    border-right: none;
+    border-bottom: 2px solid #5c5f64;
+    padding-bottom: 1rem;
+  }
+  .partner_icon {
+    margin: 2rem 0;
+    justify-content: space-between;
+  }
+  .content_wrapper {
     width: 100%;
   }
-
-  .partner_module_text {
-    margin-bottom: 30px;
-  }
-
-  .partner_icon_modules {
-    width: 100%;
-  }
-
-  .partners_icon {
-    padding: 0;
-    font-size: 2rem;
-  }
-
-  .footer_contact_address {
-    flex-direction: column-reverse;
-    row-gap: 20px;
-    margin-top: 60px;
-  }
-
-  .divider {
-    display: none;
-  }
-
-  .footer_info_module_container {
-    margin-top: 50px;
-  }
-
-  .footer_info_module {
-    padding: 0;
-    flex-direction: column;
-    row-gap: 20px;
-  }
-
-  .social_links {
-    width: 90%;
-    font-size: 2rem;
-    margin: 60px auto 0 auto;
-  }
-
-  .footer__bottom {
-    font-size: 0.8rem;
-    font-weight: 300;
-    letter-spacing: 0.1ch;
+  .footer_contents {
+    padding: 2rem 0;
   }
 }
-
-Small devices (portrait tablets and large phones, 600px and up)
-@media only screen and (min-width: 601px) and (max-width: 768px) {
-  .footer_container {
-    width: 100%;
-    height: 1200px;
-  }
-
+@media (max-width: 480px) {
   .footer_wrapper {
-    display: flex;
-    padding: 0 35px 30px 35px;
-    flex-direction: column;
+    padding: 2rem 2rem 0;
   }
-
-  .partners_module {
-    width: 100%;
+  .partner_wrapper h2 {
+    font-size: 2.2rem;
   }
-
-  .partner_module_text {
-    margin-bottom: 30px;
+  .partner_icon .icon {
+    font-size: 3rem;
   }
-
-  .partner_icon_modules {
-    width: 100%;
+  .content_category h2 {
+    font-size: 1.6rem;
   }
-
-  .partners_icon {
-    padding: 0;
-    font-size: 2.5rem;
-  }
-
-  .footer_contact_address {
-    flex-direction: column-reverse;
-    row-gap: 20px;
-    margin-top: 60px;
-  }
-
-  .divider {
-    display: none;
-  }
-
-  .footer_info_module_container {
-    margin-top: 50px;
-  }
-
-  .footer_info_module {
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 45%));
-    column-gap: auto;
-    row-gap: 30px;
+  .content_category ul li {
+    font-size: 1.2rem;
   }
   .social_links {
-    width: 70%;
-    font-size: 2rem;
-    margin: 60px auto 0 auto;
+    width: 100%;
+    margin: 1rem;
   }
 }
-
-Medium devices (landscape tablets, 768px and up)
-@media only screen and (min-width: 769px) and (max-width: 992px) {
-  .footer_container {
-    width: 100%;
-    height: 900px;
-  }
-
-  .footer_wrapper {
-    display: flex;
-    padding: 0 35px 30px 35px;
-    flex-direction: column;
-  }
-
-  .partners_module {
-    width: 100%;
-  }
-
-  .partner_module_text {
-    margin-bottom: 30px;
-  }
-
-  .partner_icon_modules {
-    width: 100%;
-  }
-
-  .partners_icon {
-    padding: 0;
-  }
-
-  .footer_contact_address {
-    flex-direction: column-reverse;
-    row-gap: 30px;
-  }
-
-  .divider {
-    display: none;
-  }
-
-  .footer_info_module_container {
-    margin-top: 50px;
-  }
-
-  .footer_info_module {
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 30%));
-    gap: auto;
-  }
-}
-
-Large devices (laptops/desktops, 992px and up)
-@media only screen and (min-width: 993px) and (max-width: 1200px) {
-  .footer_container {
-    width: 100%;
-    height: 900px;
-  }
-
-  .footer_wrapper {
-    display: flex;
-    padding: 0 35px 30px 35px;
-    flex-direction: column;
-  }
-
-  .partners_module {
-    width: 100%;
-  }
-
-  .partner_module_text {
-    margin-bottom: 30px;
-  }
-
-  .partner_icon_modules {
-    width: 100%;
-  }
-
-  .partners_icon {
-    padding: 0;
-  }
-
-  .footer_contact_address {
-    flex-direction: column-reverse;
-    row-gap: 30px;
-  }
-
-  .divider {
-    display: none;
-  }
-
-  .footer_info_module_container {
-    margin-top: 50px;
-  }
-
-  .footer_info_module {
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 32%));
-    gap: auto;
-  }
-} */
