--- a/src/css/ourteam.module.css
+++ b/src/css/ourteam.module.css
@@ -1,5 +1,5 @@
 .team_container {
-  padding-top: 5rem;
+  padding: 7.2rem 6rem 2rem;
 }
 .team_wrapper {
   display: flex;
@@ -10,7 +10,7 @@
   margin-top: 5rem;
 }
 .member_card {
-  flex: 0 0 350px;
+  flex: 0 0 320px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,4 +65,25 @@
 .member_details p {
   font-size: 1.4rem;
   margin-top: 1rem;
+  text-align: justify;
+}
+
+/* ------------Responsivness---------- */
+@media (max-width: 960px) {
+  .team_container {
+    padding: 7.2rem 4rem 2rem;
+  }
+}
+@media (max-width: 750px) {
+  .member_card {
+    flex: 0 0 350px;
+  }
+}
+@media (max-width: 480px) {
+  .team_container {
+    padding: 7.2rem 3rem 2rem;
+  }
+  .member_card {
+    flex: 0 0 100%;
+  }
 }
