--- a/src/css/testimonial.module.css
+++ b/src/css/testimonial.module.css
@@ -1,14 +1,14 @@
 .testimonials {
-  padding-top: 4rem;
+  padding: 7.2rem 8rem 2rem;
 }
 .slider_container {
-  width: 70%;
+  width: 800px;
 }
 .slider_card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem;
+  padding: 4rem 0;
 }
 .slider_card img {
   width: 120px;
@@ -24,4 +24,25 @@
   font-weight: 500;
   color: var(--primary-color);
   margin-bottom: 1rem;
+}
+/* ------------Responsivness---------- */
+@media (max-width: 1200px) {
+  .slider_container {
+    width: 650px;
+  }
+}
+@media (max-width: 960px) {
+  .slider_container {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .testimonials {
+    padding: 7rem 5rem 2rem;
+  }
+}
+@media (max-width: 480px) {
+  .testimonials {
+    padding: 7rem 3rem 2rem;
+  }
 }
