--- a/src/index.css
+++ b/src/index.css
@@ -6,23 +6,21 @@
   --accent-color: #ffbd00;
   --light-color: #fff;
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
   font-size: 62.5%;
 }
-
 body {
   font-family: "Poppins", sans-serif;
   max-width: 1700px;
   margin: 0 auto;
 }
-/* global components styles */
+
+/* -----------Shared components styles----------- */
 .button {
   padding: 1rem 2rem;
   font-size: 1.5rem;
@@ -47,7 +45,7 @@ body {
   font-weight: 600;
   color: var(--primary-color);
 }
-/* banner slider styles */
+/* ---------banner slider styles----------- */
 .swiper {
   width: 100%;
   height: 100%;
@@ -83,17 +81,3 @@ body {
 }
 @media (max-width: 480px) {
 }
-
-/* ------------Responsivness---------- */
-/* @media (max-width: 1200px) {
-  
-}
-@media (max-width: 960px) {
-  
-}
-@media (max-width: 768px) {
-  
-}
-@media (max-width: 480px) {
-  
-} */
