--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   font-family: "Poppins", sans-serif;
   max-width: 1700px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 /* -----------Shared components styles----------- */
